[metadata]
name = msword
version = 0.0.2
url = https://github.com/thorwhalen/msword
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Simple mapping view to docx (Word Doc) elements
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		docx
		doc file
		microsoft word
		msword
display_name = msword

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	py2store
	python-docx

